Cards layout for brands, hotels and hotel's floors (images for assets not included yet - alert and brand/hotel/floor images). Fixed <hr> position to match comps better. Fixed horizontal scroll-bar which will show up only when Chrome's windows is smaller than 1920px width.

--- a/Source/FacilityManagementWebsite/SmartHotel.FacilityManagementWeb/SmartHotel.FacilityManagementWeb/ClientApp/src/styles.css
+++ b/Source/FacilityManagementWebsite/SmartHotel.FacilityManagementWeb/SmartHotel.FacilityManagementWeb/ClientApp/src/styles.css
@@ -12,8 +12,13 @@
   overflow-x: hidden;
   
   margin-top: 17px;
+  margin-left: 24px;
 
   padding: 0;
+
+  /* border-style: solid;
+  border-color: grey;
+  border-width: 1px; */
 }
 
 .card {
@@ -21,11 +26,16 @@
   height: 315px;
   background-color: #FFFFFF;
 
-  margin-left: 24px;
+  margin-right: 24px;
   margin-top: 2px;
   margin-bottom: 18px;
 
   padding: 0;
+
+  /* border-style: solid;
+  border-color: grey;
+  border-width: 1px; */
+
 }
 
 .card-name {
@@ -34,67 +44,6 @@
   
   padding-top: 10px;
   padding-left: 16px;
-}
-
-.card-logo {
-  
-  height: 280px;
-
-  /* border-style: solid;
-  border-color: grey;
-  border-width: 1px; */
-}
-
-.card-logo-inner-container {
-  /* background-color: green;  */
-  width: 100%; 
-  height: 100%;
-}
-
-.card-logo-image  {
-  height: 100%;
-  width: 100%;
-}
-
-
-.card-alert-image {
-  margin-left: 400px;
-  margin-top: -595px;
-}
-
-.dashboard-cards-container {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  height: 390px;
-  width: 100%;
-  /* overflow: scroll; 
-  overflow-x: hidden; */
-  
-  margin-top: 22px;
-
-  padding: 0;
-}
-
-.dashboard-map-card {
-  width: 652px;
-  height: 391px;
-  background-color: #FFFFFF;
-
-  margin-left: 24px;
-  margin-top: 2px;
-}
-
-.dashboard-map-item {
-
-  padding-top: 11px;
-  padding-left: 8px;
-  padding-right: 8px;
-  padding-bottom: 43px;
-
-  width: 100%;
-  height: 100%;
-  
 }
 
 
@@ -125,24 +74,35 @@ body {
   /* display: inline-block; */
 }
 
+.body-heading {
+  font-family: Poppins;
+  font-size: 22px;
+}
+
+.body-content {
+  padding-top: 20px;
+  font-size: 16px;
+}
+
+
 .custom-slider .ng5-slider {
   margin: 0;
 }
 
 .custom-slider .ng5-slider .ng5-slider-bar {
-  background: #9e9e9e;
+  background: #5C84A8;
   height: 2px;
 }
 
 .custom-slider .ng5-slider .ng5-slider-selection {
-  background: #9e9e9e;
+  background: #273847;
 }
 
 .custom-slider .ng5-slider .ng5-slider-pointer {
-  width: 30px;
-  height: 30px;
-  top: -15px;
-  background-color: #00b0f0;
+  width: 16px;
+  height: 16px;
+  top: -8px;
+  background-color: #273847;
 }
 
 .custom-slider .ng5-slider .ng5-slider-pointer:focus {
